deployment/ingress/eks/faucet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${k8s_faucet_namespace}-ingress
  namespace: ${k8s_faucet_namespace}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ${fuel_faucet_ingress_dns}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fuel-faucet-service
                port:
                  number: ${fuel_faucet_ingress_http_port}
  tls:
    - hosts:
        - ${fuel_faucet_ingress_dns}
      secretName: letsencrypt-prod
